nav bar moving problem fixed and heading aligned

--- a/style.css
+++ b/style.css
@@ -55,8 +55,9 @@ h2{
     color: whitesmoke;
     text-decoration: none;
     background-color: black;
-   
-    border:solid 3px;
+    padding-right:10px;
+    padding-left:10px; 
+    box-shadow: inset 0px 0px  0px 3px whitesmoke ;
 }
 .video{
 
@@ -65,7 +66,7 @@ h2{
     background-color:rgb(94, 89, 89); 
 }
 
-nav{
+NAV{
     background-color:rgb(182, 182, 182);
     padding-top:10px;
     
@@ -82,6 +83,7 @@ padding-left:20px;
     }
  h1{
      text-align: center;
+     width:576px;
  }
  .image {
  margin-left:0px;
